--- a/imooc-security-app/pom.xml
+++ b/imooc-security-app/pom.xml
@@ -15,5 +15,9 @@
 			<artifactId>imooc-security-core</artifactId>
 			<version>${imooc.security.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+		</dependency>
 	</dependencies>
 </project>
