--- a/imooc-security-demo/src/main/resources/application.properties
+++ b/imooc-security-demo/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://127.0.0.1:3306/imooc-demo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 123456
+#spring.datasource.url= jdbc:mysql://127.0.0.1:3306/imooc-demo?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = mysql123456
+
+spring.datasource.url= jdbc:mysql://192.168.1.73:3306/yunshare?useUnicode=yes&characterEncoding=UTF-8&useSSL=false
+spring.datasource.username = sms
+spring.datasource.password = smspass
 
 spring.session.store-type = REDIS
 
